--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "url": "https://github.com/KATT/brunch-jade-stylus-coffee"
   },
   "engines": {
-    "node": "~0.6.10 || 0.8 || 0.9"
+    "node": "~0.12"
   },
   "scripts": {
     "start": "brunch watch --server",
     "test": "brunch test"
   },
   "dependencies": {
-    "jade-brunch": "~1.5.1",
-    "javascript-brunch": ">= 1.0 < 1.8",
-    "coffee-script-brunch": "~1.7.3",
+    "jade-brunch": "~1.8.1",
+    "javascript-brunch": "~1.7.1",
+    "coffee-script-brunch": "~1.8.1",
     "css-brunch": "~1.7.0",
-    "stylus-brunch": "~1.7.0",
+    "stylus-brunch": "~1.8.1",
     "static-jade-brunch": "~1.7.0",
-    "uglify-js-brunch": "~1.7.6",
-    "clean-css-brunch": "~1.7.1",
-    "auto-reload-brunch": "~1.7.1"
+    "uglify-js-brunch": "~1.7.8",
+    "clean-css-brunch": "~1.7.2",
+    "auto-reload-brunch": "~1.7.8"
   }
 }
