--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "test": "brunch test"
   },
   "dependencies": {
-    "jade-brunch": "~1.8.1",
-    "javascript-brunch": "~1.7.1",
-    "coffee-script-brunch": "~1.8.1",
-    "css-brunch": "~1.7.0",
-    "stylus-brunch": "~1.8.1",
-    "static-jade-brunch": "~1.7.0",
-    "uglify-js-brunch": "~1.7.8",
+    "auto-reload-brunch": "~1.7.8",
     "clean-css-brunch": "~1.7.2",
-    "auto-reload-brunch": "~1.7.8"
+    "coffee-script-brunch": "~1.8.1",
+    "css-brunch": "^1.7.0",
+    "jaded-brunch": "^1.7.13",
+    "javascript-brunch": "~1.7.1",
+    "lost-grid": "^5.1.5",
+    "stylus-brunch": "~1.8.1",
+    "typographic": "^2.9.2",
+    "uglify-js-brunch": "~1.7.8"
   }
 }
