--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "node-sass-middleware": "^0.9.8",
+    "node-sass-middleware": "^0.10",
     "open-color": "^1.4.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "twitter": "*"
   }
 }
